...
                                                <rect key="frame" x="0.0" y="0.0" width="334" height="478"/>
                                            </imageView>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="790-eU-zYK">
                                        <rect key="frame" x="0.0" y="498" width="334" height="40"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <segue destination="afI-lH-Pz1" kind="show" id="bEb-07-43k"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="skX-b3-bVf">
                                        <rect key="frame" x="0.0" y="558" width="334" height="40"/>
...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nibms" translatesAutoresizingMaskIntoConstraints="NO" id="pff-OX-ILm">
                                <rect key="frame" x="20" y="82" width="374" height="380"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="380" id="MdH-cq-ghR"/>
                                </constraints>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H7A-4T-Yfv">
                                <rect key="frame" x="20" y="470" width="374" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="nRr-l8-ybv"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ct8-1U-VwE">
                                <rect key="frame" x="20" y="518" width="374" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="I4i-h9-isp"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
                            <constraint firstItem="bTz-gz-QDZ" firstAttribute="leading" secondItem="B8Y-e3-omr" secondAttribute="leading" id="C0h-VW-hLY"/>
                            <constraint firstAttribute="trailing" secondItem="bTz-gz-QDZ" secondAttribute="trailing" id="cRH-Ea-FsY"/>
                            <constraint firstItem="bTz-gz-QDZ" firstAttribute="top" secondItem="B8Y-e3-omr" secondAttribute="topMargin" constant="-12" id="qeH-ep-KEL"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="zGi-ph-H7X"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Events" image="icons8-event-accepted-tentatively-100" id="JAv-Re-m4Q"/>
                    <connections>
                        <outlet property="btnShare" destination="wTL-yZ-jIG" id="ejd-79-uDD"/>
                        <outlet property="btnTrash" destination="0kY-Rw-sFs" id="w79-Uc-1NE"/>
                        <outlet property="cameraButton" destination="Sp4-gS-UVP" id="o1q-1j-55X"/>
                        <outlet property="caption" destination="hiz-8B-9Xc" id="yU1-Y3-OCq"/>
                        <outlet property="photo" destination="qy0-3d-cx6" id="KeM-40-pxh"/>
...
                                        <color key="textColor" red="0.01176470588" green="0.1450980392" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zPM-c2-giA">
                                        <rect key="frame" x="0.0" y="132" width="374" height="38"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="21"/>
                                        <state key="normal" title="Logout">
                                            <color key="titleColor" red="0.01176470588" green="0.1450980392" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="Logout:" destination="ni0-pX-KkK" eventType="touchUpInside" id="Zip-Ur-4vP"/>
                                        </connections>
                                    </button>
...
                            <constraint firstItem="Llq-pa-GaU" firstAttribute="trailing" secondItem="ZkA-KH-EEM" secondAttribute="trailing" constant="20" id="mnb-R7-ElH"/>
                            <constraint firstItem="xLf-5Y-M6E" firstAttribute="trailing" secondItem="ZkA-KH-EEM" secondAttribute="trailing" id="nGA-e2-2SY"/>
                            <constraint firstItem="ZkA-KH-EEM" firstAttribute="top" secondItem="b68-3d-UI7" secondAttribute="bottom" constant="40" id="vyX-Ej-Md2"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Llq-pa-GaU"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="My Profile" image="icons8-user-100" id="QaD-qs-VYc"/>
                    <connections>
                        <outlet property="MypostsTableView" destination="wK6-iO-dvS" id="zVg-NG-ACd"/>
                        <outlet property="contact" destination="qpU-rV-nYR" id="EGl-jE-Yf9"/>
                        <outlet property="email" destination="DRB-Bo-1H8" id="WGq-fG-Hap"/>
                        <outlet property="name" destination="WeD-kH-obg" id="0ZA-Kj-7Mw"/>
                        <outlet property="profPic" destination="wph-ae-M2D" id="qcp-WM-UKI"/>
...
